logs/Slang/generated/yosys_hana/hana_test_simulation_xor.sv.log
name: hana_test_simulation_xor
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/hana/test_simulation_xor.v /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/hana/hana_vlib.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/hana/test_simulation_xor.v:19:1: error: expected member
xor myxor(out, in[0], in[1], in[2], in[3]);
^~~
